<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">五十音</string>
    <string name="kana_range">范围</string>    
    <string name="line_select">五十音选择</string>
    
    <string name="line_a">a行 (あ、い、う、え、お)</string>
    <string name="line_k">k行 (か、き、く、け、こ)</string>
    <string name="line_s">s行 (さ、し、す、せ、そ</string>
    <string name="line_t">t行 (た、ち、つ、て、と)</string>
    <string name="line_n">n行 (な、に、ぬ、ね、の)</string>
    <string name="line_h">h行 (は、ひ、ふ、へ、ほ)</string>
    <string name="line_m">m行 (ま、み、む、め、も)</string>
    <string name="line_y">y行 (や、ゆ、よ)</string>
    <string name="line_r">r行 (ら、り、る、れ、ろ)</string>
    <string name="line_w">w行 (わ、を)</string>
            
    <string name="cur_kana">平假名</string>
    <string name="ang_kana">片假名</string>
    <string name="both_kana">全部</string>

</resources>
