<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout       
        android:id="@+id/settings_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:text="@string/kana_range"
            android:textColor="@color/android:holo_blue_light"
            android:textSize="24sp" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio_cur_kana"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="updatePreference"
                android:text="@string/cur_kana" />

            <RadioButton
                android:id="@+id/radio_ang_kana"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="updatePreference"
                android:text="@string/ang_kana" />

            <RadioButton
                android:id="@+id/radio_both_kana"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="updatePreference"
                android:text="@string/both_kana" />
        </RadioGroup>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingLeft="16dp"
            android:text="@string/line_select"
            android:textColor="@color/android:holo_blue_light"
            android:textSize="24sp" />

        <CheckBox
            android:id="@+id/checkbox_line_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="updatePreference"
            android:text="@string/line_a" />

        <CheckBox
            android:id="@+id/checkbox_line_k"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="updatePreference"
            android:text="@string/line_k" />

        <CheckBox
            android:id="@+id/checkbox_line_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="updatePreference"
            android:text="@string/line_s" />

        <CheckBox
            android:id="@+id/checkbox_line_t"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="updatePreference"
            android:text="@string/line_t" />

        <CheckBox
            android:id="@+id/checkbox_line_n"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="updatePreference"
            android:text="@string/line_n" />

        <CheckBox
            android:id="@+id/checkbox_line_h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="updatePreference"
            android:text="@string/line_h" />

        <CheckBox
            android:id="@+id/checkbox_line_m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="updatePreference"
            android:text="@string/line_m" />

        <CheckBox
            android:id="@+id/checkbox_line_y"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="updatePreference"
            android:text="@string/line_y" />

        <CheckBox
            android:id="@+id/checkbox_line_r"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="updatePreference"
            android:text="@string/line_r" />

        <CheckBox
            android:id="@+id/checkbox_line_w"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="updatePreference"
            android:text="@string/line_w" />
    </LinearLayout>

</ScrollView>